add sub commands

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "cSpell.words": [
     "gauth",
+    "gcalcli",
     "levelwriter",
-    "tokenrepo"
+    "tokenrepo",
+    "userinput"
   ]
 }
